--- a/_posts/2020-01-26-first.md
+++ b/_posts/2020-01-26-first.md
@@ -1,10 +1,13 @@
 ---
-title : "My First Post"
+title : "테스트입니다."
 category:
-    -hello
+    -test
 tag :
-    -hello2
-author_profile: true
+    -test1
+    -test2
+    -test3
+    
+author_profile: true             #좌측(목차부분)
 
 toc : true
 ---
