--- a/_posts/2020-01-26-first.md
+++ b/_posts/2020-01-26-first.md
@@ -1,5 +1,5 @@
 ---
-title : "it's test"
+title : "My first posting"
 category:
     -test
 tag :
@@ -17,10 +17,10 @@ toc : true
 
 hello
 
-## hello
+## 1
 
-### hello
+### 2
 
-#### hello
+#### 3
 
 $$hello$$
