--- a/_posts/2020-01-26-first.md
+++ b/_posts/2020-01-26-first.md
@@ -1,11 +1,10 @@
 ---
 title : "My first posting"
-category:
-    -test
+categories: test
 tag :
-    -test1
-    -test2
-    -test3
+    test1
+    test2
+    test3
     
 author_profile: true             #좌측(목차부분)
 
